# Dayz-Mod-CLI-Rust

./: Cargo.toml  README.md
src/: main.rs
